--- a/templates/index.html
+++ b/templates/index.html
@@ -104,6 +104,7 @@
 
                 <div class="form-group">
                     <label for="soil">N, P, K, temperature, humidity, ph, rainfall</label>
+                    <label for="soil"><i>Must include commas and spaces.</i></label >
                     <form action="http://localhost:5000/predict" method="POST" size = 200>
                         <label form="description"></label>
                         <input type="text" id="description" name="description">
